# precise-leak-sanitizer

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
Documentation/pseudocode/: pseudocode.md
PreciseLeakSanitizer/: CMakeLists.txt  PreciseLeakSanitizer.cpp  PreciseLeakSanitizer.h
RuntimeLibrary/: CMakeLists.txt  plsan.cpp  plsan.h  plsan_handler.cpp  plsan_handler.h  plsan_shadow.cpp  plsan_shadow.h  plsan_storage.cpp  plsan_storage.h
RuntimeLibrary/lib/: backward.h
clang/lib/CodeGen/: BackendUtil.cpp
clang/lib/Driver/: SanitizerArgs.cpp
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: config-ix.cmake
compiler-rt/cmake/Modules/: AllSupportedArchDefs.cmake
compiler-rt/lib/: CMakeLists.txt
compiler-rt/lib/asan/: asan_allocator.cpp  asan_allocator.h
compiler-rt/lib/dfsan/: dfsan_allocator.cpp
compiler-rt/lib/hwasan/: hwasan_allocator.cpp  hwasan_allocator.h
compiler-rt/lib/lsan/: lsan_allocator.cpp  lsan_common.cpp  lsan_common.h  weak_symbols.txt
compiler-rt/lib/memprof/: memprof_allocator.h
compiler-rt/lib/msan/: msan_allocator.cpp
compiler-rt/lib/plsan/: CMakeLists.txt  plsan.cpp  plsan.h  plsan_allocation_functions.cpp  plsan_allocator.cpp  plsan_allocator.h  plsan_handler.cpp  plsan_handler.h  plsan_interceptors.cpp  plsan_internal.h  plsan_linux.cpp  plsan_metalloc.cpp  plsan_metalloc.h  plsan_new_delete.cpp  plsan_posix.cpp  plsan_posix.h  (+4 more)
compiler-rt/test/: CMakeLists.txt  lit.common.cfg.py
llvm/examples/: CMakeLists.txt.rej
scripts/: apply-coding-style.sh  build-ci.sh  build.sh  check-coding-style.sh  test-plsan.sh
(+207 files in other folders)
